# pea

./: Cargo.toml  README.md  azure-pipelines.yml  design.md  grammar.ebnf
samples/run-pass/: hello.pea  math.pea  print_num.pea
src/: ast.rs  bytecode.rs  cgenir.rs  codegen.rs  debug_log.rs  diagnostics.rs  fmt_ctx.rs  gc.rs  interpreter.rs  lib.rs  nir.rs  package.rs  parser.rs  prelude.rs  prim.rs  resolve.rs  source_files.rs  ty.rs  tycheck.rs  value.rs
src/codegen/: def_consts.rs  function.rs
src/diagnostics/: diagnostic.rs  writer.rs
src/gc/: alloc.rs  trace.rs
src/interpreter/: call_stack.rs  execute.rs  func_obj_ptr.rs  func_ptr.rs  instr.rs
src/nir/: def_id.rs  def_table.rs  scope.rs
src/package/: decls.rs  def_consts.rs  def_names.rs  def_tys.rs
src/parser/: expr.rs  lexer.rs  scanner.rs  token.rs  token_stream.rs
src/prelude/: prim_methods.rs
src/prim/: bytes.rs  func.rs  list.rs  native_func.rs
src/resolve/: scope_stack.rs
src/source_files/: file_source.rs  line_numbers.rs  span.rs
src/tycheck/: constraints.rs  infer.rs  solver.rs  subst.rs  ty.rs  tyir.rs
src/value/: deep_clone.rs  func_obj.rs  obj.rs
tests/: gc-tests.rs  miri-tests.rs  test-runner.rs
tests/run-pass/: assignment.pea  assignment.stdout  augmented_assignment.pea  augmented_assignment.stdout  basic_list.pea  basic_list.stdout  block_ret.pea  block_ret.stdout  bool_lit.pea  bstr.pea  bstr_concat.pea  bstr_concat.stdout  byte_literal.pea  byte_literal.stdout  byte_str.stdout  clock.pea  comparison.pea  comparison.stdout  conditionals.pea  conditionals.stdout  fib.pea  (+34 more)
(+70 files in other folders)
