[package]
name = "pea"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
termcolor = "1.1"
parking_lot = "0.11"
static_assertions = "1.1"
structopt = "0.3"

[dev-dependencies]
rayon = "1.4"

[features]
gc_stress_test = []
